--- a/smartcloud-prices/src/main/resources/application.conf
+++ b/smartcloud-prices/src/main/resources/application.conf
@@ -7,3 +7,8 @@ smartcloud {
     base-uri = "http://localhost:9999"
     token = "lxwmuKofnxMxz6O2QE1Ogh"
 }
+
+redis {
+    host = "redis://localhost"
+    port = 6379
+}
