--- a/smartcloud-prices/src/main/resources/application.conf
+++ b/smartcloud-prices/src/main/resources/application.conf
@@ -12,5 +12,5 @@ smartcloud {
 redis {
     host = "redis://localhost"
     port = 6379
-    expired-time = 5 seconds
+    expired-time = 26 minutes
 }
